force-app/main/default/objects/OpportunityLineItem/fields/Product_Total_Annual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Total_Annual_Rate__c</fullName>
    <description>Calculates the total annual rate of a product</description>
    <formula>IF( End_Date__c = Start_Date__c, 0 , ((UnitPrice /Term_Days__c)*365)* Quantity  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Total Annual Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>