force-app/main/default/objects/OpportunityLineItem/fields/Rollup_Category__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Category__c</fullName>
    <label>Rollup Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>