force-app/main/default/objects/OpportunityLineItem/fields/Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Term_Days__c</fullName>
    <description>Calculate the term of the product</description>
    <formula>End_Date__c -  Start_Date__c +1</formula>
    <label>Term (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>